styling for body and inputs

--- a/src/style.module.css
+++ b/src/style.module.css
@@ -4,6 +4,8 @@
     justify-content: center;
 }   
 .headline {
-    color: red;
+    color: black;
+    border-bottom:2px solid orangered
     
 }
+
